This has bad contrast

--- a/goon/browserassets/css/browserOutput_dark.css
+++ b/goon/browserassets/css/browserOutput_dark.css
@@ -61,7 +61,7 @@ a:visited {color: #7c00e6;}
 .notice {color: #6685f5;}
 .bnotice {color: #6685f5;}
 .darknotice {color: #ffffff;}
-.interface {color: #7759da;}
+.interface {color: #8d6ad6;}
 .gamenotice {color: #d79921;}
 
 .whisper {color:#cccccc;}
