--- a/nano/templates/portscrubber.tmpl
+++ b/nano/templates/portscrubber.tmpl
@@ -41,8 +41,21 @@
 	<div class="item">&nbsp;</div>
 {{/if}}
 
-
 <h3>Power Regulator Status</h3>
+
+<div class="item">
+	<div class="itemLabel">
+		Scrubbing Gases:
+	</div>
+	<div class="itemContent">
+		{{:helper.link('CO<sub>2</sub>', null, {'scrub_toggle': 'co2'}, null, data.scrub_co2 ? 'greenBackground' : null)}}
+		{{:helper.link('Plasma', null, {'scrub_toggle': 'plasma'}, null, data.scrub_plasma ? 'greenBackground' : null)}}
+		{{:helper.link('N<sub>2</sub>O', null, {'scrub_toggle': 'n2o'}, null, data.scrub_n2o ? 'greenBackground' : null)}}
+		{{:helper.link('N<sub>2</sub>', null, {'scrub_toggle': 'n2'}, null, data.scrub_n2 ? 'greenBackground' : null)}}
+		{{:helper.link('O<sub>2</sub>', null, {'scrub_toggle': 'o2'}, null, data.scrub_o2 ? 'greenBackground' : null)}}
+	</div>
+</div>
+
 <div class="item">
 	<div class="itemLabel">
 		Power Switch:
