--- a/nano/templates/supply_console.tmpl
+++ b/nano/templates/supply_console.tmpl
@@ -13,6 +13,9 @@ Used In File(s): \code\game\supplyshuttle.dm
 <div style="float: right; width: 32%; margin-top: 3px;">
 	<div class="line">
 		{{:helper.link('Permissions', 'key', {'permissions' : 1})}}
+		{{if data.hacked}}
+			<br><span class='bad'>ACCESS OVERRIDDEN</span>
+		{{/if}}
 	</div>
 	{{if !data.moving && !data.at_station}}
 		{{:helper.link('Call Shuttle', 'circle-triangle-e', data.send, null)}}
