--- a/nano/templates/supply_console.tmpl
+++ b/nano/templates/supply_console.tmpl
@@ -14,7 +14,7 @@ Used In File(s): \code\game\supplyshuttle.dm
 	<div class="line">
 		{{:helper.link('Permissions', 'key', {'permissions' : 1})}}
 		{{if data.hacked}}
-			<br><span class='bad'>ACCESS OVERRIDDEN</span>
+			<span class='bad'>ACCESS OVERRIDDEN</span>
 		{{/if}}
 	</div>
 	{{if !data.moving && !data.at_station}}
