some splicer stuff

--- a/nano/templates/disease_splicer.tmpl
+++ b/nano/templates/disease_splicer.tmpl
@@ -62,7 +62,7 @@
 		{{else data.dish_error == "no virus in dish"}}
 			No virus found in containment dish.
 		{{else data.dish_error == "not enough cells"}}
-			Insufficient cells to attempt gene extraction.
+			Dish growth insufficient, incubate the dish with some virus food until reaching at least 50% growth.
 		{{else}}
 			Unknown error!
 		{{/if}}
