way too much shit

--- a/nano/templates/disease_splicer.tmpl
+++ b/nano/templates/disease_splicer.tmpl
@@ -74,6 +74,9 @@
 {{/if}}
 
 {{if data.dish_effects}}
+	<div class="item">
+		Choose a symptom to isolate its gene data. This will destroy the dish, so be sure to have a backup.
+	</div>
 	{{for data.dish_effects}}
 	<div class="item">
 		<div class="itemLabelNarrow">
