--- a/nano/css/instrument.css
+++ b/nano/css/instrument.css
@@ -1,9 +1,9 @@
-#lines {
-    display: inline;
-}
-
 .chord {
     display: inline;
+    border: 2px solid black;
+    background-color: radial-gradient(lightgrey 1%, grey 70%, black 1%);;
+    padding: 2px;
+    margin: 1px;
 }
 
 .chord.activeChord {
