--- a/html/templates/changelog.tmpl.htm
+++ b/html/templates/changelog.tmpl.htm
@@ -4,7 +4,7 @@ HEY, YOU.
 
 ADDING A CHANGELOG ENTRY? MAKE changelog/USERNAME.yml.  READ example.yml SO YOU DON'T SCREW UP.
 
-ADDING CREDITS?  EDIT templates/header.html (or footer.html if they're for old teams)
+ADDING CREDITS?  EDIT templates/changelog.tmpl.html
 --->
 <html>
 	<head>
