--- a/nano/templates/vote.tmpl
+++ b/nano/templates/vote.tmpl
@@ -42,7 +42,7 @@ Used in File(s): \code\controllers\voting.dm
 	{{/for}}
 	<div class = "item">
 		<div class = "itemContent">
-			{{:helper.link('Cancel your vote', null, { 'cancel_vote' : 1})}}
+			{{:helper.link('Cancel your vote', null, { 'vote' : 'cancel_vote'})}}
 		</div>
 	</div>
 	{{if data.admin == 1}}
