--- a/goon/browserassets/css/browserOutput_dark.css
+++ b/goon/browserassets/css/browserOutput_dark.css
@@ -45,6 +45,8 @@ a:visited {color: #7c00e6;}
 .engradio {color: #f37746;}
 .medradio {color: #57b8f0;}
 .sciradio {color: #c68cfa;}
+.serradio {color: #c09461;}
+.supradio {color: #b4760a;}
 .binaryradio {color: #bdbdbd}
 .mommiradio {color: #9c9fc9;}
 
