makes maroon brighter
this is the one that effects admin PMs, big thanks to eneocho for finding it for me

--- a/goon/browserassets/css/browserOutput_dark.css
+++ b/goon/browserassets/css/browserOutput_dark.css
@@ -27,6 +27,7 @@ a:visited {color: #7c00e6;}
 .admin {color: #5975da;}
 .adminmod {color: #8f5e2e;}
 .modooc {color: #ffffff;}
+.maroon {color: #c52943;}
 
 .deadsay {color: #e2c1ff;}
 .cult {color: #aa1c1c;}
